[Assets] Update PL planning up to the belief part

--- a/elective_hours/index.html
+++ b/elective_hours/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-    <title>Scheduling elective hours in secondary education</title>
+    <title>Personalising elective hours in secondary education</title>
     <link rel="shortcut icon" href="./../favicon.ico" />
     <link rel="stylesheet" href="./../dist/reveal.css" />
     <link rel="stylesheet" href="./../dist/theme/black.css" id="theme" />
@@ -14,47 +14,88 @@
   </head>
   <body>
     <div class="reveal">
-      <div class="slides"><section  data-markdown><script type="text/template">
+      <div class="slides"><section ><section data-markdown><script type="text/template">
 
-# Scheduling elective hours in secondary education
+# Personalising elective hours in secondary education
 
 <br>
 
 Niels A. Wouda
 
 15-12-2021
-</script></section><section ><section data-markdown><script type="text/template">
-# The problem
-
-- Weekly schedule
-- Partially fixed
-- Other part electives
-- Learners get to decide which electives
 </script></section><section data-markdown><script type="text/template">
+<!-- .slide: data-transition="none" -->
+
+## Problem setting
+
+Elective hours:
+
+|   | Monday  | Tuesday | Wednesday |
+|---|---------|---------|-----------|
+| 1 | (fixed) | ?       | (fixed)   |
+| 2 | (fixed) | (fixed) | (fixed)   |
+| 3 | (fixed) | (fixed) | ?         |
+| 4 | ?       | ?       | (fixed)   |
+</script></section><section data-markdown><script type="text/template">
+<!-- .slide: data-transition="none" -->
+
+## Problem setting
+
+We schedule:
+
+|   | Monday      | Tuesday       | Wednesday         |
+|---|-------------|---------------|-------------------|
+| 1 | (fixed)     | Math/Dutch    | (fixed)           |
+| 2 | (fixed)     | (fixed)       | (fixed)           |
+| 3 | (fixed)     | (fixed)       | Math/French/Dutch |
+| 4 | Math/French | German/French | (fixed)           |
+</script></section><section data-markdown><script type="text/template">
+<!-- .slide: data-transition="none" -->
+
+## Problem setting
+
+Learner chooses:
+
+|   | Monday        | Tuesday         | Wednesday           |
+|---|---------------|-----------------|---------------------|
+| 1 | (fixed)       | Math~/Dutch~    | (fixed)             |
+| 2 | (fixed)       | (fixed)         | (fixed)             |
+| 3 | (fixed)       | (fixed)         | Math~/French/Dutch~ |
+| 4 | Math~/French~ | ~German/~French | (fixed)             |
+
+</script></section></section><section  data-markdown><script type="text/template">
 # The problem
 
-- What electives to offer?
-- When to offer them?
-- To which learners?
-</script></section></section><section ><section data-markdown><script type="text/template">
+- _Scheduling_: which electives to offer?
+- _Personalising_: what electives do learners really need?
+  - How can we know?
+</script></section><section ><section data-markdown><script type="text/template">
 # The approach
 
 - Multiple weeks
 - Each week:
-  - Optimise schedule given beliefs about learner demands
+  - Optimise schedule given beliefs about learner needs
   - Update beliefs based on learner choices
-</script></section><section data-markdown><script type="text/template">
-# Optimise schedule
+
+<aside class="notes"><p>Due to time limitations, I will not discuss the scheduling problem today.
+It can be solved, using mostly straightforward math.
+I would rather discuss learning/updating learner needs!</p>
+</aside></script></section><section data-markdown><script type="text/template">
+## Notation
 
 TODO
 </script></section><section data-markdown><script type="text/template">
-# Update beliefs
+## Update beliefs
 
 TODO
 </script></section></section><section  data-markdown><script type="text/template">
 # Conclusion
 
-TODO
+- Personalising elective hours in secondary education:
+  - Scheduling given beliefs about learner needs 
+  - Updating beliefs based on learner choices
+- Extensions:
+  - TODO 
 </script></section></div>
     </div>
 
