[Assets] Tidy up last slide

--- a/euro_neurips/index.html
+++ b/euro_neurips/index.html
@@ -191,13 +191,14 @@ Such routes only contain optional requests, and those requests could, for exampl
 <p>What you see on this slide is the solution we return to the environment.</p>
 <p>And that is more or less it!</p>
 </aside></script></section></section><section  data-markdown><script type="text/template">
-# Questions?
+# Thank you
 
-n.a.wouda@rug.nl
+Questions? n.a.wouda@rug.nl
 
-https://github.com/N-Wouda/Euro-NeurIPS-2022
+Code: https://github.com/N-Wouda/Euro-NeurIPS-2022
 
-<aside class="notes"><p>We do not have any time for questions right now, but please feel free to e-mail me, or open an issue in our GitHub repository.</p>
+<aside class="notes"><p>We do not have any time for questions right now, but please feel free to e-mail me.
+The code is available in the linked repository.</p>
 </aside></script></section></div>
     </div>
 
