--- a/euro_neurips/index.html
+++ b/euro_neurips/index.html
@@ -49,19 +49,14 @@ That is also very interesting (and turned out to be really important, too!), so 
 
 > Our ``Config`` object has 26 fields, compared to the baseline's 42.
 
-<aside class="notes"><p>Constructive heuristics could be removed because we wanted to get into the main genetic search loop as quickly as possible.
-Our initial population is randomly generated.
-We removed the circle sectors because we do intensification somewhat differently (more on that in the next slide).
-The giant tour representation and the linear split algorithm were only needed for the ordered exchange crossover.
-We remove that crossover, which meant we no longer needed to store the giant tour.
-The dynamic growth parameters did not seem to help much because the sizes they control are already &#39;large enough&#39;. </p>
-<p>Removing all this did not seem to hurt performance at all.
+<aside class="notes"><p>Removing all this did not seem to hurt performance at all.
 So we more or less made everything much simpler at zero cost to performance.</p>
-<p>Having many fewer parameters was a big boon when it came to tuning.</p>
+<p>I summarised this simplification by noting that we have many fewer parameters than the baseline.
+This was a big boon when it came to tuning.</p>
 </aside></script></section><section data-markdown><script type="text/template">
 ## Tweak local search
 
-<!-- .slide: data-transition="none" -->
+Noteable differences:
 
 <div style="display: flex;">
 
@@ -69,7 +64,8 @@ So we more or less made everything much simpler at zero cost to performance.</p>
 
 Baseline:
 
-- <b>Always at least two iterations. Later iterations test against empty routes.</b>
+- Always at least two iterations. Later iterations test against empty routes.
+- Probabilistically apply intensification.
 
 </div>
 
@@ -77,7 +73,10 @@ Baseline:
 
 Ours:
 
-- <b>One iteration if no improvement. Empty routes rarely result in improvement.</b>
+- One iteration if no improvement. Empty routes rarely result in improvement.
+- Intensify only new best individuals.
+- Templated $(N, M)$ exchange.
+
 </div>
 
 </div>
@@ -85,86 +84,24 @@ Ours:
 <aside class="notes"><p>The baseline local search loop performs at least two iterations.
 We found that this was very rarely useful if the first iteration does not yet result in an improvement.
 So we removed the two iterations requirement, and do multiple iterations only if there has been an improvement.</p>
-</aside></script></section><section data-markdown><script type="text/template">
-## Tweak local search
-
-<!-- .slide: data-transition="none" -->
-
-<div style="display: flex;">
-
-<div style="max-width: 50%; flex: 1;">
-
-Baseline:
-
-- Always at least two iterations. Later iterations test against empty routes.
-- <b>Probabilistically apply intensification with RELOCATE* and SWAP*.</b>
-- <b>Uses circle sector restriction for intensification.</b>
-
-</div>
-
-<div style="max-width: 50%; flex: 1;">
-
-Ours:
-
-- One iteration if no improvement. Empty routes rarely result in improvement.
-- <b>Apply intensification only for new best individuals.</b>
-- <b>Since new best individuals are rare, no circle sector restriction is needed.</b>
-</div>
-
-</div>
-
-<aside class="notes"><p>We moved intensification with route operators out of the regular local search loop.
-It is a separate function now, that is only called when we find a new best individual.</p>
-<p>As a consequence, we no longer needed the circle sector restriction.</p>
-</aside></script></section><section data-markdown><script type="text/template">
-## Tweak local search
-
-<!-- .slide: data-transition="none" -->
-
-<div style="display: flex;">
-
-<div style="max-width: 50%; flex: 1;">
-
-Baseline:
-
-- Always at least two iterations. Later iterations test against empty routes.
-- Probabilistically apply intensification with RELOCATE* and SWAP*.
-- Uses circle sector restriction for intensification.
-- <b>Hard-coded operators.</b>
-
-</div>
-
-<div style="max-width: 50%; flex: 1;">
-
-Ours:
-
-- One iteration if no improvement. Empty routes rarely result in improvement.
-- Apply intensification only for new best individuals.
-- Since new best individuals are rare, no circle sector restriction is needed.
-- <b>Modular operator set.</b>
-- <b>Templated $(N, M)$ exchange with many small performance tweaks.</b>
-</div>
-
-</div>
-
-<aside class="notes"><p>Our operators are stored as lists of function pointers.
-We run through these and apply the operators.
-So not running an operator is as easy as not providing it to the local search in the first place.</p>
-<p>$(N, M)$ exchange covers six out of eight node-based operators.
-So having one bit of code for all that means we can very effectively improve a lot of operators at the same time.</p>
+<p>We intensify with route operators (including RELOCATE* and SWAP*) only when we find a new best individual.
+Since new best solutions are very rare, we no longer needed the circle sector restriction.</p>
+<p>Finally, six of the eight baseline node operators are special cases of general (N, M) exchange, which we implemented as a single templated class.
+This exchange function replaces N nodes starting at U with M nodes starting at V.
+For example, relocate is (1, 0) exchange, and swap is (1, 1) exchange.
+We implement a number of performance tweaks in our general implementation, resulting in even more efficient move evaluations.</p>
 </aside></script></section></section><section ><section data-markdown><script type="text/template">
 # Dynamic solver
 
 Idea:
 > Simulate ahead to determine which requests to postpone
 
-<aside class="notes"><p>This is easiest to explain via an example, which we will go through in the next few slides.</p>
+<aside class="notes"><p>The core idea is to use simulation.
+This is easiest to explain via an example, which we will go through in the next few slides.</p>
 </aside></script></section><section data-markdown><script type="text/template">
 <img width="80%" src="images/epoch_instance_2.svg" />
 
-<aside class="notes"><p>Every epoch, we have a set of &#39;must-dispatch&#39; and &#39;optionally dispatch&#39; requests.
-Some optional requests we want to dispatch along with the must-dispatch requests, since that might result in fairly efficient routes.</p>
-<p>Here you see an example epoch with one &#39;must-dispatch&#39; request, and ten optional requests.</p>
+<aside class="notes"><p>Here you see an example epoch with one &#39;must-dispatch&#39; request, and ten optional requests.</p>
 </aside></script></section><section data-markdown><script type="text/template">
 <img width="80%" src="images/simulation_instance_2_0_0.svg" />
 
@@ -176,7 +113,7 @@ The sampled future requests have smaller node sizes and grey color, to distingui
 <img width="80%" src="images/simulation_instance_with_solution_2_0_0.svg" />
 
 <aside class="notes"><p>We solve each simulated instance very quickly, in less than half a second.
-This slide shows the simulation solution, i.e., the solution that is obtained by solving the simulation instance.
+This slide shows the solution that is obtained by solving the simulation instance.
 Routes that do not contain the must-dispatch request are coloured grey.
 The route that contains the must-dispatch request is colored red.</p>
 <p>Of course, this is just one simulation.
